--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,8 +72,10 @@
     <Compile Include="Assets\Scripts\UpgradeCard.cs" />
     <Compile Include="Assets\Scripts\movement.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\nextWave.cs" />
     <Compile Include="Assets\Scripts\Cannon_Shot.cs" />
     <Compile Include="Assets\Scripts\machineLogic.cs" />
+    <Compile Include="Assets\Scripts\example.cs" />
     <Compile Include="Assets\Scripts\coinLogic.cs" />
     <Compile Include="Assets\Scripts\Projectile_Destroy.cs" />
     <Compile Include="Assets\Scripts\SaveSystem.cs" />
