--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     <UnityVersion>2022.3.57f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Users\USUARIO\.vscode\extensions\visualstudiotoolsforunity.vstuc-1.1.1\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.57f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.57f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -74,14 +75,14 @@
     <Compile Include="Assets\Scripts\UpgradeCard.cs" />
     <Compile Include="Assets\Scripts\movement.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Scripts_menu\UpgradeData.cs" />
+    <Compile Include="Assets\Scripts\Scripts_menu\SceneChanger.cs" />
     <Compile Include="Assets\Scripts\nextWave.cs" />
+    <Compile Include="Assets\Scripts\Scripts_menu\GoldManager.cs" />
+    <Compile Include="Assets\Scripts\Scripts_menu\UpgradeItemUI.cs" />
     <Compile Include="Assets\Scripts\Cannon_Shot.cs" />
     <Compile Include="Assets\Scripts\machineLogic.cs" />
     <Compile Include="Assets\Scripts\example.cs" />
-    <Compile Include="Assets\Scripts\Scripts_menu\UpgradeData.cs" />
-    <Compile Include="Assets\Scripts\Scripts_menu\SceneChanger.cs" />
-    <Compile Include="Assets\Scripts\Scripts_menu\GoldManager.cs" />
-    <Compile Include="Assets\Scripts\Scripts_menu\UpgradeItemUI.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\UpgradeSpawner.cs" />
     <Compile Include="Assets\Scripts\coinLogic.cs" />
     <Compile Include="Assets\Scripts\Projectile_Destroy.cs" />
