--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,18 +62,20 @@
     <Compile Include="Assets\Scripts\Bomb.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\AudioManager.cs" />
     <Compile Include="Assets\Scripts\HUD_Coins.cs" />
+    <Compile Include="Assets\Scripts\ClearEffect.cs" />
     <Compile Include="Assets\Scripts\PlayerData.cs" />
     <Compile Include="Assets\Scripts\SpawnerLogic.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\UpgradeDetailsUI.cs" />
+    <Compile Include="Assets\Scripts\SlashProjectile.cs" />
     <Compile Include="Assets\Scripts\BlessingsMenuUI.cs" />
     <Compile Include="Assets\Scripts\BulletController.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\PlayerStats.cs" />
     <Compile Include="Assets\Scripts\InventoryManager.cs" />
-    <Compile Include="Assets\Item.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\BlessData.cs" />
     <Compile Include="Assets\Scripts\UpgradeCard.cs" />
     <Compile Include="Assets\Scripts\movement.cs" />
+    <Compile Include="Assets\Scripts\SwordSlashEffect.cs" />
     <Compile Include="Assets\Scripts\BlessingManager.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\UpgradeData.cs" />
@@ -86,6 +88,7 @@
     <Compile Include="Assets\Scripts\Cannon_Shot.cs" />
     <Compile Include="Assets\Scripts\machineLogic.cs" />
     <Compile Include="Assets\Scripts\example.cs" />
+    <Compile Include="Assets\Scripts\Item.cs" />
     <Compile Include="Assets\Scripts\Scripts_menu\UpgradeSpawner.cs" />
     <Compile Include="Assets\Scripts\coinLogic.cs" />
     <Compile Include="Assets\Scripts\Projectile_Destroy.cs" />
